# Video-Editor-App-Pro

./: README.md
qml/: AIToolsPanel.qml  BeatDetectionPanel.qml  qml.qrc
src/: CMakeLists.txt  ai_services.cpp  ai_services.h  background_remover.h  beat_detector.cpp  beat_detector.h  object_tracker.h
